# arkive

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  arkhive  arkive  install.bash  nul  replace_vars.sh  test.sh  test2.opus
docs/: conf.py
lib/: audio  blackbars  chapters  cleanup  cpuinfo  deinterlace  depcheck  encode  inputfiledetails  inputparser  mux  subtitles  termcolors  usage
profiles/: ark-hevc.profile  ogg-opus.profile  plex.profile
src/: audio.bash  defaults.bash  ffprobe.bash  filename.bash  input.bash  main.bash  requires.bash  stream.bash  subtitle.bash  tmp.bash  video.bash
src/ffmpeg/audio/: bitrate.bash  channels.bash  cutoff.bash  encoder.bash  filters.bash  main.bash  sample-format.bash  sample-rate.bash
src/ffmpeg/audio/enc-params/: fdk-aac.bash  ffaac.bash  ffopus.bash  flac.bash  opus.bash
src/ffmpeg/audio/filters/: channel-layout-mapper.bash  ebu-r128.bash  highpass.bash  lowpass.bash  resample.bash
src/ffmpeg/video/: bitrate.bash  encoder.bash  filters.bash  framerate.bash  keyframe.bash  merange.bash  pixel-format.bash
src/ffmpeg/video/enc-params/: libaom-av1.bash  libvpx-vp9.bash  nvenc-h264.bash  vaapi-h264.bash  x264.bash  x265.bash  x26x.bash
src/ffmpeg/video/filters/: colorspace.bash  crop-black-bars.bash  de-interlace.bash  denoise.bash  scale.bash  zscale.bash
src/ffmpeg/video/levels/: h264.bash  h265.bash
src/profiles/: ark-avc.bash  ark-hevc.bash  m4a-aac.bash  nvenc.bash  ogg-opus.bash  plex.bash
src/share/arkive/: input.bash  requires.bash  subtitle.bash  video.bash
src/share/arkive-profiles/: hevc-high.profile
src/share/arkive/ffmpeg/audio/: bitrate.bash  encoder.bash  main.bash  sample-rate.bash
src/share/arkive/ffmpeg/audio/enc-params/: fdk-aac.bash  ffaac.bash  flac.bash
src/share/arkive/ffmpeg/audio/filters/: channel-layout-mapper.bash  ebu-r128.bash
src/share/arkive/ffmpeg/video/: encoder.bash  filters.bash  framerate.bash  merange.bash  pixel-format.bash
src/share/arkive/ffmpeg/video/enc-params/: nvenc-h264.bash  x264.bash  x26x.bash
src/share/arkive/ffmpeg/video/filters/: colorspace.bash  de-interlace.bash  zscale.bash
src/share/arkive/ffmpeg/video/levels/: h265.bash
src/share/arkive/profiles/: ark-avc.profile  m4a-aac.profile  nvenc.profile
src/share/lib-arkive/: arkive.bash  audio.bash  defaults.bash  ffprobe.bash  filename.bash  input.bash  requires.bash  stream-selector.bash  stream.bash  subtitle.bash  tmp.bash  video.bash
src/share/lib-arkive/ffmpeg/audio/: bitrate.bash  channels.bash  cutoff.bash  encoder.bash  filters.bash  main.bash  sample-format.bash  sample-rate.bash
src/share/lib-arkive/ffmpeg/audio/enc-params/: fdk-aac.bash  ffaac.bash  flac.bash  opus.bash
src/share/lib-arkive/ffmpeg/audio/filters/: channel-layout-mapper.bash  ebu-r128.bash  lowpass.bash  resample.bash
src/share/lib-arkive/ffmpeg/subtitle/: main.bash
src/share/lib-arkive/ffmpeg/video/: bitrate.bash  encoder.bash  filters.bash  framerate.bash  keyframe.bash  main.bash  merange.bash  pixel-format.bash
src/share/lib-arkive/ffmpeg/video/enc-params/: libvpx-vp9.bash  nvenc-h264.bash  vaapi-h264.bash  x264.bash  x265.bash  x26x.bash
src/share/lib-arkive/ffmpeg/video/filters/: colorspace.bash  crop-black-bars.bash  de-interlace.bash  denoise.bash
src/share/lib-arkive/profiles/: ark-avc.profile  ark-hevc.profile  nvenc.profile
(+2 files in other folders)
